--- a/src/nav/MainNav.scss
+++ b/src/nav/MainNav.scss
@@ -1,14 +1,18 @@
 .nav {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100vw;
+  left: calc((100% - 375px) / 2);
+  width: 375px;
+  margin: auto;
   height: 100vh;
   background: #2f2926;
 
   &__close {
-    padding: 20px;
     cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 20px;
   }
 
   &__ul {
@@ -19,15 +23,29 @@
     list-style-type: none;
     gap: 30px;
     height: 100vh;
+
+    & > li:not(:last-child) {
+      position: relative;
+      padding-bottom: 40px;
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translateX(-50%);
+        width: 50px;
+        height: 2px;
+        background-color: white;
+        opacity: 0.2;
+      }
+    }
   }
 
   &__link {
     color: white;
     text-decoration: none;
     font-size: 32px;
-  }
-  &__li:not(:last-child) {
-    border-bottom: 2px solid white;
     padding-bottom: 20px;
   }
 }
