--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -2,8 +2,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  /* Add padding to accommodate the cart count */
-  padding-right: 50px; /* Adjust this value as needed */
+  padding-right: 50px;
 
   &__openMenu {
     cursor: pointer;
