--- a/src/pages/styles/PageAbout.scss
+++ b/src/pages/styles/PageAbout.scss
@@ -3,7 +3,7 @@
   display: flex;
   width: 375px;
   margin: auto;
-
+  background: #f3e4e1;
   flex-direction: column;
   justify-content: space-between;
 
