--- a/src/pages/styles/PageProfile.scss
+++ b/src/pages/styles/PageProfile.scss
@@ -6,39 +6,43 @@
   width: 375px;
   margin: auto;
   background: gray;
-}
-.pageProfile__content {
-  border: 2px solid black;
-  flex: 1;
-  margin: -25px 10px 10px 10px;
-  background: white;
-  display: flex;
-  flex-direction: column;
 
-  gap: 20px;
-  background: #f3e4e1;
-  padding: 20px;
-}
-.pageProfile__form {
-  display: flex;
-  flex-direction: column;
-}
-.pageProfile__form input {
-  background: #f3e4e1;
-  font-size: 32px;
-  margin: 10px 0;
-}
-.pageProfile__form__button {
-  color: white;
-  background: black;
-  border-radius: 20px;
-  padding: 15px 10px;
-  cursor: pointer;
-  margin-top: 40px;
-  margin: auto;
-  font-size: 24px;
-}
-.pageProfile__logo__container {
-  display: flex;
-  justify-content: center;
+  &__content {
+    border: 2px solid black;
+    flex: 1;
+    margin: -25px 10px 10px 10px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    background: #f3e4e1;
+    padding: 20px;
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__form input {
+    background: #f3e4e1;
+    font-size: 32px;
+    margin: 10px 0;
+  }
+
+  &__form__button {
+    color: white;
+    background: black;
+    border-radius: 20px;
+    padding: 15px 10px;
+    cursor: pointer;
+    margin-top: 40px;
+    margin: auto;
+    font-size: 24px;
+  }
+
+  &__logo__container {
+    display: flex;
+    justify-content: center;
+  }
 }
