--- a/src/pages/styles/PageStatus.scss
+++ b/src/pages/styles/PageStatus.scss
@@ -1,6 +1,6 @@
 .pageStatus {
   background: #e5674e;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   color: #ffffff;
@@ -25,7 +25,6 @@
 
   &__button {
     font-size: 24px;
-
     border-radius: 25px;
     padding: 15px 10px;
   }
