--- a/src/pages/styles/PageProfile.scss
+++ b/src/pages/styles/PageProfile.scss
@@ -40,3 +40,13 @@
     justify-content: center;
   }
 }
+.accountCreated {
+  color: green;
+  text-align: center;
+  margin-top: 20px;
+}
+.accountNotCreated {
+  color: red;
+  text-align: center;
+  margin-top: 20px;
+}
